--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
     </div>
     <div class="hero-image-wrapper">
       <!-- Replace profile.jpg with your actual image file name, or remove this block if no image yet -->
-      <img src="nemkova.jpeg" alt="Portrait of Apollinaria Poli Nemkova" />
+      <img src="portrait.jpeg" alt="Portrait of Apollinaria Poli Nemkova" />
     </div>
   </section>
 
