Revise publication details in index.html
Updated publication list with new entries and authors.

--- a/index.html
+++ b/index.html
@@ -313,7 +313,6 @@
       </div>
     </div>
     <div class="hero-image-wrapper">
-      <!-- Replace profile.jpg with your actual image file name, or remove this block if no image yet -->
       <img src="portrait.jpeg" alt="Portrait of Apollinaria Poli Nemkova" />
     </div>
   </section>
@@ -443,13 +442,48 @@
       <ul>
         <li>
           <strong>Detecting Human Rights Violations on Social Media during the Russia–Ukraine War</strong><br />
-          A. Nemkova et al., [Venue / Year]<br />
-          <span class="meta-note">[Add: <a href="#">PDF</a> · <a href="#">Code</a> · <a href="#">Data</a>]</span>
+          P. Nemkova, S. Ubani, S. O. Polat, N. Kim, R. D. Nielsen.<br />
+          <span class="meta-note">AAAI Conference on Artificial Intelligence (AAAI), 2025. [<a href="https://arxiv.org/abs/2306.05370" target="_blank" rel="noopener noreferrer">arXiv:2306.05370</a>]</span>
         </li>
         <li>
-          <strong>[Paper Title]</strong><br />
-          [Authors], [Venue / Year]<br />
-          <span class="meta-note">[Add: <a href="#">PDF</a> · <a href="#">Code</a>]</span>
+          <strong>Comparing LLM Text Annotation Skills: A Study on Human Rights Violations in Social Media Data</strong><br />
+          P. A. Nemkova, S. Ubani, M. V. Albert.<br />
+          <span class="meta-note">AAAI, 2025 (in press).</span>
+        </li>
+        <li>
+          <strong>Cross-Lingual Stability and Bias in Instruction-Tuned Language Models for Humanitarian NLP</strong><br />
+          P. Nemkova, A. Adhikari, M. Pearson, V. K. Sadu, M. V. Albert.<br />
+          <span class="meta-note">arXiv preprint arXiv:2510.22823, 2025.</span>
+        </li>
+        <li>
+          <strong>Towards Automated Situation Awareness: A RAG-Based Framework for Peacebuilding Reports</strong><br />
+          P. A. Nemkova, S. O. Polat, R. I. Jahan, S. R. Choudhury, S. Lee, S. Sarkar, ...<br />
+          <span class="meta-note">arXiv preprint arXiv:2505.10586, 2025.</span>
+        </li>
+        <li>
+          <strong>Synthetic Adaptive Guided Embeddings (SAGE): A Novel Knowledge Distillation Method</strong><br />
+          S. Olcay Polat, P. A. Nemkova, M. V. Albert.<br />
+          <span class="meta-note">arXiv preprint arXiv:2508.14783, 2025.</span>
+        </li>
+        <li>
+          <strong>NLP for Social Good: A Survey of Challenges, Opportunities, and Responsible Deployment</strong><br />
+          A. Karamolegkou, A. Borah, E. Cho, S. R. Choudhury, M. Galletti, R. Ghosh, ... P. Nemkova.<br />
+          <span class="meta-note">arXiv preprint arXiv:2505.22327, 2025.</span>
+        </li>
+        <li>
+          <strong>Agentic Multilingual NLP for Conflict Forecasting from Open-Source Text Streams</strong><br />
+          P. Nemkova, M. V. Albert.<br />
+          <span class="meta-note">Women in Machine Learning (WiML) Workshop @ NeurIPS, 2025.</span>
+        </li>
+        <li>
+          <strong>Improved Bitcoin Price Prediction based on COVID-19 Data</strong><br />
+          P. Niamkova, R. Moreira.<br />
+          <span class="meta-note">IJCAI–PRICAI, 2021.</span>
+        </li>
+        <li>
+          <strong>funtimes: Functions for Time Series Analysis</strong><br />
+          V. Lyubchich, Y. R. Gel, A. Brenning, C. Chu, X. Huang, U. Islambekov, P. Niamkova, ...<br />
+          <span class="meta-note">CRAN R package, 2019. [<a href="https://cran.r-project.org/web/packages/funtimes/index.html" target="_blank" rel="noopener noreferrer">CRAN page</a>]</span>
         </li>
       </ul>
       <p class="meta-note">
