--- a/index.html
+++ b/index.html
@@ -10,269 +10,268 @@
   />
   <link rel="icon" href="favicon.jpeg" type="image/jpeg">
 
-  <style>
-    /* --------- Base styles --------- */
-    * {
-      box-sizing: border-box;
-    }
+ /* --------- Base styles --------- */
+* {
+  box-sizing: border-box;
+}
 
-    html {
-      scroll-behavior: smooth;
-    }
+html {
+  scroll-behavior: smooth;
+}
 
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background: #f5f5f7;
-      color: #111111;
-      line-height: 1.7;
-      font-size: 16px;
-    }
+body {
+  margin: 0;
+  padding: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+  background: #f5f5f7;
+  color: #374151;  /* dark grey */
+  line-height: 1.7;
+  font-size: 16px;
+}
 
-    a {
-      color: #111827;
-      text-decoration: none;
-    }
+a {
+  color: #374151; /* dark grey */
+  text-decoration: none;
+}
 
-    a:hover {
-      text-decoration: underline;
-    }
+a:hover {
+  text-decoration: underline;
+}
 
-    /* --------- Layout & global --------- */
-    header {
-      position: sticky;
-      top: 0;
-      z-index: 20;
-      background: rgba(245, 245, 247, 0.96);
-      backdrop-filter: blur(8px);
-      border-bottom: 1px solid rgba(15, 23, 42, 0.06);
-    }
+/* --------- Layout & global --------- */
+header {
+  position: sticky;
+  top: 0;
+  z-index: 20;
+  background: rgba(245, 245, 247, 0.96);
+  backdrop-filter: blur(8px);
+  border-bottom: 1px solid rgba(55, 65, 81, 0.12); /* softer border */
+}
 
-    .nav-inner {
-      max-width: 1120px;
-      margin: 0 auto;
-      padding: 1rem 1.8rem;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      gap: 1.5rem;
-      flex-wrap: wrap;
-    }
+.nav-inner {
+  max-width: 1120px;
+  margin: 0 auto;
+  padding: 1rem 1.8rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1.5rem;
+  flex-wrap: wrap;
+}
 
-    .nav-title {
-      font-family: "Garamond", "Cormorant Garamond", Georgia, "Times New Roman", serif;
-      font-size: 1.05rem;
-      letter-spacing: 0.16em;
-      text-transform: uppercase;
-      color: #020617;
-      white-space: nowrap;
-    }
+.nav-title {
+  font-family: "Garamond", "Cormorant Garamond", Georgia, "Times New Roman", serif;
+  font-size: 1.05rem;
+  letter-spacing: 0.16em;
+  text-transform: uppercase;
+  color: #1f2937; /* deep grey for title */
+  white-space: nowrap;
+}
 
-    .nav-links {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 1.8rem;                /* wider spacing between items */
-      font-size: 0.78rem;         /* slightly smaller text */
-      letter-spacing: 0.18em;
-      text-transform: uppercase;
-    }
+.nav-links {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.6rem;
+  font-size: 0.8rem;
+  letter-spacing: 0.14em;
+  text-transform: uppercase;
+}
 
-    .nav-links a {
-      color: #9ca3af;             /* light grey */
-    }
+.nav-links a {
+  color: #6b7280;  /* light grey */
+}
 
-    .nav-links a:hover {
-      color: #374151;             /* darker grey on hover */
-    }
+.nav-links a:hover {
+  color: #1f2937;  /* darker grey on hover */
+}
 
-    .hero {
-      max-width: 1120px;
-      margin: 0 auto;
-      padding: 3.5rem 1.5rem 2.75rem;
-      display: grid;
-      grid-template-columns: minmax(0, 3fr) minmax(0, 2fr);
-      gap: 2.5rem;
-      align-items: center;
-    }
+.hero {
+  max-width: 1120px;
+  margin: 0 auto;
+  padding: 3.5rem 1.5rem 2.75rem;
+  display: grid;
+  grid-template-columns: minmax(0, 3fr) minmax(0, 2fr);
+  gap: 2.5rem;
+  align-items: center;
+}
 
-    .hero h1 {
-      margin: 0 0 0.4rem;
-      font-family: "Garamond", "Cormorant Garamond", Georgia, "Times New Roman", serif;
-      font-size: 2.6rem;
-      font-weight: 500;
-      letter-spacing: 0.12em;
-      text-transform: uppercase;
-    }
+.hero h1 {
+  margin: 0 0 0.4rem;
+  font-family: "Garamond", "Cormorant Garamond", Georgia, "Times New Roman", serif;
+  font-size: 2.6rem;
+  font-weight: 500;
+  letter-spacing: 0.12em;
+  text-transform: uppercase;
+  color: #1f2937; /* elegant dark grey */
+}
 
-    .hero-subtitle {
-      margin: 0 0 1.2rem;
-      font-size: 1rem;
-      font-weight: 500;
-      letter-spacing: 0.16em;
-      text-transform: uppercase;
-      color: #6b7280;
-    }
+.hero-subtitle {
+  margin: 0 0 1.2rem;
+  font-size: 1rem;
+  font-weight: 500;
+  letter-spacing: 0.16em;
+  text-transform: uppercase;
+  color: #6b7280;
+}
 
-    .hero p {
-      margin: 0 0 1.5rem;
-      max-width: 40rem;
-      color: #111827;
-    }
+.hero p {
+  margin: 0 0 1.5rem;
+  max-width: 40rem;
+  color: #374151; /* consistent dark grey */
+}
 
-    .hero-buttons {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 0.75rem;
-      margin-top: 0.25rem;
-    }
+.hero-buttons {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.75rem;
+  margin-top: 0.25rem;
+}
 
-    .btn {
-      display: inline-block;
-      padding: 0.6rem 1.5rem;
-      border-radius: 999px;
-      font-size: 0.8rem;
-      letter-spacing: 0.18em;
-      text-transform: uppercase;
-      border: 1px solid #111827;
-      background: transparent;
-      color: #111827;
-    }
+.btn {
+  display: inline-block;
+  padding: 0.6rem 1.5rem;
+  border-radius: 999px;
+  font-size: 0.8rem;
+  letter-spacing: 0.18em;
+  text-transform: uppercase;
+  border: 1px solid #374151;
+  background: transparent;
+  color: #374151;
+}
 
-    .btn-primary {
-      background: #111827;
-      color: #f9fafb;
-    }
+.btn-primary {
+  background: #374151;
+  color: #f9fafb;
+}
 
-    .btn:hover {
-      text-decoration: none;
-      filter: brightness(1.03);
-    }
+.btn:hover {
+  text-decoration: none;
+  filter: brightness(1.05);
+}
 
-    .hero-image-wrapper {
-      display: flex;
-      justify-content: flex-end;
-    }
+.hero-image-wrapper {
+  display: flex;
+  justify-content: flex-end;
+}
 
-    .hero img {
-      max-width: 260px;
-      width: 100%;
-      border-radius: 22px;
-      border: 1px solid rgba(15, 23, 42, 0.08);
-      box-shadow: 0 18px 45px rgba(15, 23, 42, 0.12);
-      object-fit: cover;
-      background: #e5e7eb;
-    }
+.hero img {
+  max-width: 260px;
+  width: 100%;
+  border-radius: 22px;
+  border: 1px solid rgba(55, 65, 81, 0.15); /* soft grey */
+  box-shadow: 0 18px 45px rgba(55, 65, 81, 0.16);
+  object-fit: cover;
+  background: #e5e7eb;
+}
 
-    main {
-      max-width: 1120px;
-      margin: 0 auto;
-      padding: 0 1.5rem 3.5rem;
-    }
+main {
+  max-width: 1120px;
+  margin: 0 auto;
+  padding: 0 1.5rem 3.5rem;
+}
 
-    section {
-      padding: 2.3rem 0 2.1rem;
-      border-top: 1px solid rgba(15, 23, 42, 0.06);
-    }
+section {
+  padding: 2.3rem 0 2.1rem;
+  border-top: 1px solid rgba(55, 65, 81, 0.12); /* subtle grey border */
+}
 
-    section:first-of-type {
-      border-top: none;
-    }
+section:first-of-type {
+  border-top: none;
+}
 
-    section h2 {
-      margin: 0 0 0.85rem;
-      font-family: "Garamond", "Cormorant Garamond", Georgia, "Times New Roman", serif;
-      font-size: 1.35rem;
-      font-weight: 500;
-      letter-spacing: 0.20em;
-      text-transform: uppercase;
-      color: #020617;
-    }
+section h2 {
+  margin: 0 0 0.85rem;
+  font-family: "Garamond", "Cormorant Garamond", Georgia, "Times New Roman", serif;
+  font-size: 1.35rem;
+  font-weight: 500;
+  letter-spacing: 0.20em;
+  text-transform: uppercase;
+  color: #1f2937; /* elegant dark grey */
+}
 
-    section p {
-      margin: 0 0 0.9rem;
-      max-width: 50rem;
-      color: #111827;
-    }
+section p {
+  margin: 0 0 0.9rem;
+  max-width: 50rem;
+  color: #374151;
+}
 
-    .two-col {
-      display: grid;
-      grid-template-columns: minmax(0, 1.1fr) minmax(0, 1.1fr);
-      gap: 2rem;
-      margin-top: 1.1rem;
-    }
+.two-col {
+  display: grid;
+  grid-template-columns: minmax(0, 1.1fr) minmax(0, 1.1fr);
+  gap: 2rem;
+  margin-top: 1.1rem;
+}
 
-    .subheading {
-      font-weight: 600;
-      margin-bottom: 0.2rem;
-      color: #020617;
-    }
+.subheading {
+  font-weight: 600;
+  margin-bottom: 0.2rem;
+  color: #1f2937;
+}
 
-    ul {
-      padding-left: 1.2rem;
-      margin: 0.3rem 0 0.9rem;
-      color: #111827;
-    }
+ul {
+  padding-left: 1.2rem;
+  margin: 0.3rem 0 0.9rem;
+  color: #374151;
+}
 
-    li {
-      margin-bottom: 0.4rem;
-    }
+li {
+  margin-bottom: 0.4rem;
+}
 
-    .meta-note {
-      font-size: 0.88rem;
-      color: #6b7280;
-    }
+.meta-note {
+  font-size: 0.88rem;
+  color: #6b7280;
+}
 
-    /* --------- Footer --------- */
-    footer {
-      border-top: 1px solid rgba(15, 23, 42, 0.06);
-      padding: 1.6rem 1.5rem 2.3rem;
-      text-align: center;
-      font-size: 0.85rem;
-      color: #6b7280;
-    }
+/* --------- Footer --------- */
+footer {
+  border-top: 1px solid rgba(55, 65, 81, 0.12);
+  padding: 1.6rem 1.5rem 2.3rem;
+  text-align: center;
+  font-size: 0.85rem;
+  color: #6b7280;
+}
 
-    /* --------- Responsive --------- */
-    @media (max-width: 900px) {
-      .hero {
-        grid-template-columns: minmax(0, 1fr);
-        padding-top: 2.8rem;
-      }
-      .hero-image-wrapper {
-        justify-content: flex-start;
-      }
-      .hero img {
-        max-width: 220px;
-      }
-      .two-col {
-        grid-template-columns: minmax(0, 1fr);
-      }
-      .nav-inner {
-        justify-content: center;
-        text-align: center;
-      }
-      .nav-title {
-        width: 100%;
-        text-align: center;
-      }
-      .nav-links {
-        justify-content: center;
-        gap: 1.1rem;   /* slightly tighter on mobile */
-      }
-    }
+/* --------- Responsive --------- */
+@media (max-width: 900px) {
+  .hero {
+    grid-template-columns: minmax(0, 1fr);
+    padding-top: 2.8rem;
+  }
+  .hero-image-wrapper {
+    justify-content: flex-start;
+  }
+  .hero img {
+    max-width: 220px;
+  }
+  .two-col {
+    grid-template-columns: minmax(0, 1fr);
+  }
+  .nav-inner {
+    justify-content: center;
+    text-align: center;
+  }
+  .nav-title {
+    width: 100%;
+    text-align: center;
+  }
+  .nav-links {
+    justify-content: center;
+  }
+}
 
-    @media (max-width: 520px) {
-      .hero h1 {
-        font-size: 2rem;
-      }
-      .hero-subtitle {
-        font-size: 0.85rem;
-      }
-      body {
-        font-size: 15px;
-      }
-    }
-  </style>
+@media (max-width: 520px) {
+  .hero h1 {
+    font-size: 2rem;
+  }
+  .hero-subtitle {
+    font-size: 0.85rem;
+  }
+  body {
+    font-size: 15px;
+  }
+}
+
 </head>
 <body>
   <!-- Navigation -->
